# sequence_evolution

./: .gitignore  .gitmodules  README.md  evo2_readme.md  guidance.md  pyproject.toml  setup_cuda.sh
examples/: basic_evolution.py  basic_sequence.py  evolve_sequence.py
sequence_evolution/: evolvers.py
src/sequence_evolution/: __init__.py  evolver.py
tests/: test_evo2.py  test_evolver.py
